# juscash

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/src/scraper/domain/: entities.py
scraper/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
scraper/config/: date_range.txt
scraper/cron/: cronjob
scraper/src/scraper/: __init__.py
scraper/src/scraper/application/: __init__.py
scraper/src/scraper/application/ports/: extract_and_persist_court_data_use_case.py
scraper/src/scraper/application/services/: extract_and_persist_court_data_service.py
scraper/src/scraper/domain/: __init__.py  case.py  court_case.py
scraper/src/scraper/domain/ports/: __init__.py  case_repository.py  court_case_extractor.py  court_case_repository.py
scraper/src/scraper/infrastructure/: __init__.py  container.py  database_config.py  juscash_assessment_settings.py
scraper/src/scraper/infrastructure/crawlers/: __init__.py  bs_crawlee_court_case_extractor.py
scraper/src/scraper/infrastructure/crawlers/request_builders/: __init__.py  case_details_request.py  case_search_request_builder.py
scraper/src/scraper/infrastructure/persistence/migrations/: env.py
scraper/src/scraper/infrastructure/persistence/migrations/versions/: 8c0f5a76029a_initial_migration_final_attempt.py  a47eadc19301_case.py
scraper/src/scraper/infrastructure/persistence/models/: __init__.py  base.py  base_model.py  court_case_model.py
scraper/src/scraper/infrastructure/persistence/repositories/: __init__.py  sqlalchemy_court_case_repository.py
scraper/src/scraper/presentation/: __init__.py  cli.py
scraper/storage/request_queues/default/: HNZGFLxeBynABeX.json  __metadata__.json
scraper/tests/: __init__.py  conftest.py
scraper/tests/fixtures/vcr_cassettes/: court_case_extraction.yaml
scraper/tests/scraper/application/: test_extract_and_persist_court_data_service.py
scraper/tests/scraper/domain/: test_court_case.py
scraper/tests/scraper/domain/ports/: test_court_case_extractor_filters.py
scraper/tests/scraper/infrastructure/: test_container.py
scraper/tests/scraper/infrastructure/crawlers/: test_bs_crawlee_court_case_extractor.py
scraper/tests/scraper/infrastructure/crawlers/request_builders/: test_case_search_request_builder.py
scraper/tests/scraper/infrastructure/persistence/models/: test_base_model.py  test_court_case_model.py
scraper/tests/scraper/infrastructure/persistence/repositories/: test_sqlalchemy_court_case_repository.py
