# pyproject.toml

[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Glauber Brennon <glauberbrennon@gmail.com>"]
readme = "README.md"
packages = [{include = "scraper", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.13.2"
sqlalchemy = "^2.0.41"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.1"
mypy = "^1.16.1"
pre-commit = "^4.0.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Ruff Configuration ---
[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["F401"]  # Allow unused imports in scripts

# --- MyPy Configuration ---
[tool.mypy]
python_version = "3.12"
strict = true
exclude = [".venv/", "__pycache__/"]

[[tool.mypy.overrides]]
module = ["requests.*", "beautifulsoup4.*", "selenium.*"]
ignore_missing_imports = true

# Setup commands:
# poetry install
# poetry run pre-commit install
#
# Daily usage:
# poetry run ruff format .
# poetry run ruff check .
# poetry run mypy .
